--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');</script><!-- <script src="http://54.68.129.229/socket.io/socket.io.js"></script> --><script src=scripts/gml-editor.js></script><script src=scripts/gml-canvas.js></script><script src=scripts/form.js></script><!-- endbuild --><script type=text/javascript>app.ui = {};
+            ga('create','UA-XXXXX-X');ga('send','pageview');</script><!-- <script src="http://54.68.129.229/socket.io/socket.io.js"></script> --><script src=scripts/3c115ae4.main.js></script><script type=text/javascript>app.ui = {};
             app.ui.textForm = (function(){
                 'use strict';
                 var MAX_CHARS = 140;
