--- a/index2.html
+++ b/index2.html
@@ -22,4 +22,4 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');</script><script src=scripts/utils.js></script><script src=scripts/main.js></script><script src=scripts/gml-canvas.js></script><script src=scripts/renderer.js></script><script type=text/javascript>// app.gmlRenderer.init('content', d1, 3000, 600,600);</script>
+            ga('create','UA-XXXXX-X');ga('send','pageview');</script><script src=scripts/utils.js></script><script src=scripts/3c115ae4.main.js></script><script src=scripts/gml-canvas.js></script><script src=scripts/renderer.js></script><script type=text/javascript>// app.gmlRenderer.init('content', d1, 3000, 600,600);</script>
