--- a/index3.html
+++ b/index3.html
@@ -5,4 +5,4 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');</script><script src=scripts/main.js></script><script type=text/javascript>app.gmlRenderer.init('content', d1, 3000, 600,600);</script>
+            ga('create','UA-XXXXX-X');ga('send','pageview');</script><script src=scripts/3c115ae4.main.js></script><script type=text/javascript>app.gmlRenderer.init('content', d1, 3000, 600,600);</script>
