--- a/index2.html
+++ b/index2.html
@@ -17,9 +17,4 @@
 
             </li></script><script type=text/template id=drawing-card-template><li class='card'>
 
-            </li></script><script src=scripts/c9161027.vendor.js></script><!-- Google Analytics: change UA-XXXXX-X to be your site's ID. --><script>(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');</script><script src=scripts/utils.js></script><script src=scripts/9074bf6f.main.js></script><script src=scripts/gml-canvas.js></script><script src=scripts/renderer.js></script><script type=text/javascript>// app.gmlRenderer.init('content', d1, 3000, 600,600);</script>
+            </li></script><script src=scripts/c9161027.vendor.js></script><script src=scripts/9074bf6f.main.js></script>
