--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class=no-js><head><meta charset=utf-8><title>website</title><meta name=description content=""><meta name=viewport content="width=device-width"><link rel="shortcut icon" href=/6df2b309.favicon.ico><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel=stylesheet href=styles/51748679.main.css><body><!--[if lt IE 10]>
+<!DOCTYPE html><html class=no-js><head><meta charset=utf-8><title>website</title><meta name=description content=""><meta name=viewport content="width=device-width"><link rel="shortcut icon" href=/6df2b309.favicon.ico><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel=stylesheet href=styles/47e77288.main.css><body><!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]--><nav></nav><div id=main-container><div id=content><ul id=cards></ul></div></div><script type=text/template id=author-meta-template><div class='author-meta'>
 
@@ -17,12 +17,14 @@
 
             </li></script><script type=text/template id=drawing-card-template><li class='card'>
 
-            </li></script><script src=scripts/c9161027.vendor.js></script><script src=scripts/93505a65.main.js></script><script type=text/javascript>var x2js = new X2JS(),
+            </li></script><script src=scripts/251bc70a.vendor.js></script><script src=scripts/93505a65.main.js></script><script type=text/javascript>var x2js = new X2JS(),
     app = app || {},
     lastId = '',
-    containerId = 'cards';
+    containerId = 'cards',
+    ajaxState = 0;
 
 'use strict';
+    var container = document.querySelector('#cards');
 
 $.ajax({
     url: 'http://54.68.129.229/api/entries',
@@ -34,10 +36,20 @@ $.ajax({
         })
     }
 });
+    var msnry = new Masonry( '#cards', {
+      // options
+      columnWidth: 355,
+      itemSelector: '.card'
+    });
+
 
 $(window).scroll(function() {
     'use strict';
-    if($(window).scrollTop() + $(window).height()=== $(document).height()) {
+    var container = document.querySelector('#cards');
+
+    if($(window).scrollTop() + $(window).height()=== $(document).height() && ajaxState === 0) {
+        console.log('getting more cards');
+        ajaxState = 1;
         $.ajax({
             url: 'http://54.68.129.229/api/entries/'+lastId,
             dataType: "jsonp",    crossDomain:true, 
@@ -46,6 +58,12 @@ $(window).scroll(function() {
                 data.entries.forEach(function(entry){
                     app.renderer.render(entry);
                 })
+                var msnry = new Masonry( '#cards', {
+                  // options
+                  columnWidth: 355,
+                  itemSelector: '.card'
+                });
+                ajaxState = 0;
             }
         });
     }
