--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class=no-js><head><meta charset=utf-8><title>website</title><meta name=description content=""><meta name=viewport content="width=device-width"><link rel="shortcut icon" href=/6df2b309.favicon.ico><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel=stylesheet href=styles/47e77288.main.css><body><!--[if lt IE 10]>
+<!DOCTYPE html><html class=no-js><head><meta charset=utf-8><title>website</title><meta name=description content=""><meta name=viewport content="width=device-width"><link rel="shortcut icon" href=/6df2b309.favicon.ico><link rel=stylesheet type=text/css href=//cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel=stylesheet href=styles/97df1913.main.css><body><!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]--><nav></nav><div id=main-container><div id=content><ul id=cards></ul></div></div><script type=text/template id=author-meta-template><div class='author-meta'>
 
@@ -17,7 +17,7 @@
 
             </li></script><script type=text/template id=drawing-card-template><li class='card'>
 
-            </li></script><script src=scripts/251bc70a.vendor.js></script><script src=scripts/93505a65.main.js></script><script type=text/javascript>var x2js = new X2JS(),
+            </li></script><script src=scripts/251bc70a.vendor.js></script><script src=scripts/d0678a8f.main.js></script><script type=text/javascript>var x2js = new X2JS(),
     app = app || {},
     lastId = '',
     containerId = 'cards',
@@ -38,7 +38,7 @@ $.ajax({
 });
     var msnry = new Masonry( '#cards', {
       // options
-      columnWidth: 355,
+      columnWidth: 300,
       itemSelector: '.card'
     });
 
@@ -60,7 +60,7 @@ $(window).scroll(function() {
                 })
                 var msnry = new Masonry( '#cards', {
                   // options
-                  columnWidth: 355,
+                  columnWidth: 295,
                   itemSelector: '.card'
                 });
                 ajaxState = 0;
