--- a/index2.html
+++ b/index2.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html><html class=no-js><head><meta charset=utf-8><title>website</title><meta name=description content=""><meta name=viewport content="width=device-width"><link rel="shortcut icon" href=/6df2b309.favicon.ico><link rel=stylesheet type=text/css href=http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel=stylesheet href=styles/97df1913.main.css><body><!--[if lt IE 10]>
+<!DOCTYPE html><html class=no-js><head><meta charset=utf-8><title>website</title><meta name=description content=""><meta name=viewport content="width=device-width"><link rel="shortcut icon" href=/6df2b309.favicon.ico><!--         <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+ --><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel=stylesheet href=styles/27ba0fe7.main.css><body><!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]--><nav></nav><div id=main-container><div id=content><ul id=cards></ul></div></div><script type=text/template id=author-meta-template><div class='author-meta'>
 
             <% if (name) { %>
                by <p class='author-name'><%-name%></p>
             <% } else { %>
+                by <p class='author-name'>Anonymous</p>
+            <% } %>
 
             <% if (location) { %>
                 from <p class='author-location'><%-name%></p>
             <% } %>
                 <p class='time'></p>
+
 
             </div></script><!-- template --><script type=text/template id=text-card-template><li class='card card-text'>
 
@@ -17,54 +21,58 @@
 
             </li></script><script type=text/template id=drawing-card-template><li class='card'>
 
-            </li></script><script src=scripts/251bc70a.vendor.js></script><script src=scripts/d0678a8f.main.js></script><script type=text/javascript>var x2js = new X2JS(),
-    app = app || {},
-    lastId = '',
-    containerId = 'cards',
-    ajaxState = 0;
+                    <div class='author-meta'>
+                        <p class='author-name'>Anonymous</p>
+                        <p class='time'>10:00</p>
+                    </div>
+            </li></script><script src=scripts/251bc70a.vendor.js></script><script src=scripts/3a2222a7.main.js></script><script type=text/javascript>var x2js = new X2JS(),
+                app = app || {},
+                lastId = '',
+                containerId = 'cards',
+                ajaxState = 1;
 
-'use strict';
-    var container = document.querySelector('#cards');
+            'use strict';
+                var container = document.querySelector('#cards');
 
-$.ajax({
-    url: 'http://54.68.129.229/api/entries',
-    dataType: "jsonp",    crossDomain:true, 
-    success : function (data, textStatus, jqXHR) { 
-        lastId = data.lastId
-        data.entries.forEach(function(entry){
-            app.renderer.render(entry);
-        })
-    }
-});
-    var msnry = new Masonry( '#cards', {
-      // options
-      columnWidth: 300,
-      itemSelector: '.card'
-    });
+            $.ajax({
+                url: 'http://54.68.129.229/api/entries',
+                dataType: "jsonp",    crossDomain:true, 
+                success : function (data, textStatus, jqXHR) { 
+                    lastId = data.lastId
+                    data.entries.forEach(function(entry){
+                        app.renderer.render(entry,270);
+                    });
+                    ajaxState=0;
+                }
+            });
+            var msnry = new Masonry( '#cards', {
+              // options
+              columnWidth: 300,
+              itemSelector: '.card'
+            });
 
+            $(window).scroll(function() {
+                'use strict';
+                var container = document.querySelector('#cards');
 
-$(window).scroll(function() {
-    'use strict';
-    var container = document.querySelector('#cards');
-
-    if($(window).scrollTop() + $(window).height()=== $(document).height() && ajaxState === 0) {
-        console.log('getting more cards');
-        ajaxState = 1;
-        $.ajax({
-            url: 'http://54.68.129.229/api/entries/'+lastId,
-            dataType: "jsonp",    crossDomain:true, 
-            success : function (data, textStatus, jqXHR) { 
-                lastId = data.lastId
-                data.entries.forEach(function(entry){
-                    app.renderer.render(entry);
-                })
-                var msnry = new Masonry( '#cards', {
-                  // options
-                  columnWidth: 295,
-                  itemSelector: '.card'
-                });
-                ajaxState = 0;
-            }
-        });
-    }
-});</script>
+                if($(window).scrollTop() + $(window).height()=== $(document).height() && ajaxState === 0) {
+                    console.log('getting more cards');
+                    ajaxState = 1;
+                    $.ajax({
+                        url: 'http://54.68.129.229/api/entries/'+lastId,
+                        dataType: "jsonp",    crossDomain:true, 
+                        success : function (data, textStatus, jqXHR) { 
+                            lastId = data.lastId
+                            data.entries.forEach(function(entry){
+                                app.renderer.render(entry, 270);
+                            })
+                            var msnry = new Masonry( '#cards', {
+                              // options
+                              columnWidth: 300,
+                              itemSelector: '.card'
+                            });
+                            ajaxState = 0;
+                        }
+                    });
+                }
+            });</script>
